made a central responses file, made a teapot handler, updated user delete handler
